[gd_scene load_steps=35 format=3 uid="uid://6kakbhuggq26"]

[ext_resource type="PackedScene" uid="uid://bfy0muija47yp" path="res://Assets/RPG/KayKit_Adventurers_1.0_FREE/KayKit_Adventurers_1.0_FREE/Characters/gltf/Knight.glb" id="1_5nuvq"]
[ext_resource type="Script" path="res://Scripts/basicMovement.gd" id="2_oo3c0"]
[ext_resource type="PackedScene" uid="uid://ckstcle8h8g1f" path="res://Scenes/Characters/UI/PlayerUI.tscn" id="3_662v4"]
[ext_resource type="ArrayMesh" uid="uid://biiw7y7uud02i" path="res://Assets/KayKit_DungeonRemastered_1.1_FREE/Assets/obj/bottle_C_green.obj" id="3_v2pxa"]
[ext_resource type="Script" path="res://Scripts/hurtbox.gd" id="4_ipphy"]
[ext_resource type="Texture2D" uid="uid://b0pidw1cbkwmk" path="res://Assets/UI_Assets/Barbarian.png" id="5_d417u"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_036e2"]
animation = &"1H_Melee_Attack_Chop"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_h78dc"]
animation = &"1H_Melee_Attack_Slice_Diagonal"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_117fo"]
animation = &"1H_Melee_Attack_Slice_Horizontal"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_bjub6"]
animation = &"Death_A"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ihjfx"]
animation = &"Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_2ftwj"]
animation = &"Running_A"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_11tg4"]
animation = &"Walking_Backwards"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_pbimw"]
animation = &"Running_Strafe_Left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_uampc"]
animation = &"Running_Strafe_Right"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_mra2p"]
blend_point_0/node = SubResource("AnimationNodeAnimation_ihjfx")
blend_point_0/pos = Vector2(0, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_2ftwj")
blend_point_1/pos = Vector2(0, 1)
blend_point_2/node = SubResource("AnimationNodeAnimation_11tg4")
blend_point_2/pos = Vector2(0, -1)
blend_point_3/node = SubResource("AnimationNodeAnimation_pbimw")
blend_point_3/pos = Vector2(-1, 0)
blend_point_4/node = SubResource("AnimationNodeAnimation_uampc")
blend_point_4/pos = Vector2(1, 0)
sync = true

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_xcgbf"]
animation = &"Interact"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_pdavg"]
animation = &"Use_Item"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_xldxr"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_pslpk"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_w0bnc"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_lcx2c"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_il1di"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_hn3e3"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_kpwmb"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_up81j"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_c6b14"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_drn4t"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_l443x"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_c7ux7"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_ohl2b"]
states/1H_Melee_Attack_Chop/node = SubResource("AnimationNodeAnimation_036e2")
states/1H_Melee_Attack_Chop/position = Vector2(579, 48.4508)
states/1H_Melee_Attack_Slice_Diagonal/node = SubResource("AnimationNodeAnimation_h78dc")
states/1H_Melee_Attack_Slice_Diagonal/position = Vector2(339, 15.4508)
states/1H_Melee_Attack_Slice_Horizontal/node = SubResource("AnimationNodeAnimation_117fo")
states/1H_Melee_Attack_Slice_Horizontal/position = Vector2(830, 15.4508)
states/Death_A/node = SubResource("AnimationNodeAnimation_bjub6")
states/Death_A/position = Vector2(806, 188)
states/End/position = Vector2(944, 188)
states/IWR/node = SubResource("AnimationNodeBlendSpace2D_mra2p")
states/IWR/position = Vector2(579, 188)
states/Interact/node = SubResource("AnimationNodeAnimation_xcgbf")
states/Interact/position = Vector2(246, 104.451)
states/Start/position = Vector2(246, 188)
states/Use_Item/node = SubResource("AnimationNodeAnimation_pdavg")
states/Use_Item/position = Vector2(715, 307.615)
transitions = ["Start", "IWR", SubResource("AnimationNodeStateMachineTransition_xldxr"), "IWR", "Death_A", SubResource("AnimationNodeStateMachineTransition_pslpk"), "IWR", "Interact", SubResource("AnimationNodeStateMachineTransition_w0bnc"), "IWR", "1H_Melee_Attack_Chop", SubResource("AnimationNodeStateMachineTransition_lcx2c"), "IWR", "1H_Melee_Attack_Slice_Horizontal", SubResource("AnimationNodeStateMachineTransition_il1di"), "IWR", "1H_Melee_Attack_Slice_Diagonal", SubResource("AnimationNodeStateMachineTransition_hn3e3"), "1H_Melee_Attack_Slice_Diagonal", "IWR", SubResource("AnimationNodeStateMachineTransition_kpwmb"), "1H_Melee_Attack_Chop", "IWR", SubResource("AnimationNodeStateMachineTransition_up81j"), "1H_Melee_Attack_Slice_Horizontal", "IWR", SubResource("AnimationNodeStateMachineTransition_c6b14"), "Interact", "IWR", SubResource("AnimationNodeStateMachineTransition_drn4t"), "IWR", "Use_Item", SubResource("AnimationNodeStateMachineTransition_l443x"), "Use_Item", "IWR", SubResource("AnimationNodeStateMachineTransition_c7ux7")]
graph_offset = Vector2(-84, 150.615)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_p56nj"]
height = 2.4

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ddw3a"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_iogo1"]
texture = ExtResource("5_d417u")

[node name="Knight" instance=ExtResource("1_5nuvq")]
collision_layer = 10
script = ExtResource("2_oo3c0")

[node name="Skeleton3D" parent="Rig" index="0"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)
bones/1/position = Vector3(0, 0.390237, 0)
bones/1/rotation = Quaternion(-1.11123e-10, 0.0431578, 2.57241e-09, 0.999068)
bones/2/rotation = Quaternion(-6.93889e-18, 7.10543e-15, 4.93038e-32, 1)
bones/3/rotation = Quaternion(8.27181e-25, 3.72529e-09, 0, 1)
bones/4/position = Vector3(0.212007, 0.134132, 7.92996e-08)
bones/4/rotation = Quaternion(-0.558392, -0.0617508, -0.647978, 0.514304)
bones/5/rotation = Quaternion(1.98782e-08, -4.22802e-08, -0.488029, 0.872827)
bones/7/rotation = Quaternion(-0.319808, -0.325445, 0.142198, 0.878401)
bones/8/position = Vector3(8.34843e-10, 0.0961252, -0.0575)
bones/8/rotation = Quaternion(0.000558846, 0.000558814, -0.705052, 0.709155)
bones/14/position = Vector3(-0.212007, 0.134132, 8.6814e-08)
bones/14/rotation = Quaternion(-0.617032, 0.0816162, 0.621565, 0.475676)
bones/15/rotation = Quaternion(2.05549e-08, 5.28951e-08, 0.511552, 0.859253)
bones/17/rotation = Quaternion(-0.31808, 0.30027, -0.223807, 0.870961)
bones/18/position = Vector3(-1.5736e-08, 0.0961251, -0.0575)
bones/18/rotation = Quaternion(0.00102467, 0.00120691, 0.706043, 0.708167)
bones/21/rotation = Quaternion(-5.80608e-11, -0.0313417, -1.88012e-09, 0.999509)
bones/24/position = Vector3(0.170945, 0.113587, 1.59941e-08)
bones/24/rotation = Quaternion(0.993547, 0.0834873, 0.0741542, 0.0198664)
bones/25/rotation = Quaternion(0.21884, 6.59138e-08, -1.47132e-07, 0.975761)
bones/26/rotation = Quaternion(-0.529644, -0.208803, 0.0471811, 0.820764)
bones/27/rotation = Quaternion(-9.74065e-09, 0.920355, -0.391084, 7.8309e-08)
bones/28/position = Vector3(-0.170945, 0.113587, 1.55755e-08)
bones/28/rotation = Quaternion(0.996902, -0.0298123, 0.0313578, 0.0656893)
bones/29/rotation = Quaternion(0.291087, -6.35243e-08, 2.01927e-07, 0.956697)
bones/30/rotation = Quaternion(-0.568118, 0.114399, -0.0100478, 0.814895)
bones/31/rotation = Quaternion(3.03591e-08, 0.920355, -0.391084, -6.95338e-08)
bones/32/rotation = Quaternion(0.707107, -2.29302e-07, -4.60552e-08, 0.707107)
bones/33/position = Vector3(0.202182, 0.0259903, 0.205181)
bones/33/rotation = Quaternion(-0.707107, -7.05285e-08, -7.05285e-08, 0.707107)
bones/34/rotation = Quaternion(9.65792e-09, 1.77955e-09, 0.985719, -0.168398)
bones/35/position = Vector3(-2.60494e-08, 0.213436, -5.1715e-09)
bones/35/rotation = Quaternion(-1.01273e-07, 0.391084, 0.920355, -3.35091e-08)
bones/36/position = Vector3(8.58988e-09, 0.16565, -2.40963e-09)
bones/37/rotation = Quaternion(1, -2.33136e-09, 1.99777e-07, -1.34211e-15)
bones/39/rotation = Quaternion(0.707107, -3.82385e-08, 1.45009e-07, 0.707107)
bones/40/rotation = Quaternion(-0.707107, -7.05285e-08, -7.05285e-08, 0.707107)
bones/41/rotation = Quaternion(-5.83589e-09, 6.43837e-10, 0.994809, 0.101756)
bones/42/position = Vector3(-1.11482e-08, 0.213436, -2.50942e-15)
bones/42/rotation = Quaternion(-1.05796e-07, 0.391084, 0.920355, -2.58643e-08)
bones/43/position = Vector3(-6.31128e-09, 0.16565, 2.70695e-09)
bones/44/rotation = Quaternion(1, 3.76526e-09, 1.94879e-07, 7.45058e-09)
bones/46/rotation = Quaternion(-0.707107, -7.27951e-08, -7.27951e-08, 0.707107)
bones/47/position = Vector3(0.520841, 0.783783, -0.0576374)
bones/47/rotation = Quaternion(0.794627, -1.11759e-07, 0.607098, -5.96046e-08)
bones/48/rotation = Quaternion(-0.707107, -7.27951e-08, -7.27951e-08, 0.707107)
bones/49/position = Vector3(-0.510844, 0.783783, 0.0597369)
bones/49/rotation = Quaternion(0.758253, 1.52737e-07, -0.651961, 1.11759e-08)

[node name="1H_Sword_Offhand" parent="Rig/Skeleton3D" index="0"]
transform = Transform3D(2.4697e-06, 0.262866, 0.964832, 0.999981, -0.00580098, 0.00157836, 0.00601209, 0.964814, -0.262861, 0.51216, 0.631809, -0.00259491)
visible = false

[node name="Badge_Shield" parent="Rig/Skeleton3D" index="1"]
transform = Transform3D(2.49212e-06, 0.262865, 0.964832, 0.999981, -0.00580352, 0.00157903, 0.00601471, 0.964814, -0.262861, 0.662563, 0.632055, -0.0435711)

[node name="Rectangle_Shield" parent="Rig/Skeleton3D" index="2"]
transform = Transform3D(2.49212e-06, 0.262865, 0.964832, 0.999981, -0.00580352, 0.00157903, 0.00601471, 0.964814, -0.262861, 0.662563, 0.632055, -0.0435711)
visible = false

[node name="Round_Shield" parent="Rig/Skeleton3D" index="3"]
transform = Transform3D(2.49212e-06, 0.262865, 0.964832, 0.999981, -0.00580352, 0.00157903, 0.00601471, 0.964814, -0.262861, 0.662563, 0.632055, -0.0435711)
visible = false

[node name="Spike_Shield" parent="Rig/Skeleton3D" index="4"]
transform = Transform3D(2.49212e-06, 0.262865, 0.964832, 0.999981, -0.00580352, 0.00157903, 0.00601471, 0.964814, -0.262861, 0.662563, 0.632055, -0.0435711)
visible = false

[node name="1H_Sword" parent="Rig/Skeleton3D" index="5"]
transform = Transform3D(-0.00071221, -0.153014, 0.988223, 0.999994, -0.00300348, 0.000255166, 0.00292948, 0.988219, 0.153016, -0.496164, 0.636051, 0.139033)

[node name="Potion" type="MeshInstance3D" parent="Rig/Skeleton3D/1H_Sword" index="1"]
transform = Transform3D(0.325719, 0.37432, 0.0615771, -0.374543, 0.330207, -0.0260985, -0.0602048, -0.0291249, 0.495507, -0.151836, 0.190826, 0.0291089)
visible = false
mesh = ExtResource("3_v2pxa")

[node name="2H_Sword" parent="Rig/Skeleton3D" index="6"]
transform = Transform3D(-0.000712226, -0.153014, 0.988223, 0.999994, -0.00300349, 0.00025518, 0.00292949, 0.988219, 0.153016, -0.496164, 0.636051, 0.139033)
visible = false

[node name="Knight_Helmet" parent="Rig/Skeleton3D" index="7"]
transform = Transform3D(0.99972, -1.40143e-09, 0.0236466, 1.39341e-09, 1, 3.55686e-10, -0.0236466, -3.22637e-10, 0.99972, 4.69869e-07, 1.20046, -1.19779e-07)

[node name="Knight_Cape" parent="Rig/Skeleton3D" index="8"]
transform = Transform3D(0.996275, -5.14962e-09, 0.0862353, 5.13043e-09, 1, 4.44077e-10, -0.0862353, 1.88007e-15, 0.996275, -1.63023e-08, 1.20046, -1.40136e-07)

[node name="RemoteTransform3D" type="RemoteTransform3D" parent="Rig" index="1"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 1.80548, 0)
remote_path = NodePath("../../PlayerUi/PortraitCamera/ClippingMask/SubViewportContainer/PlayerPortrait/SpringArm3D")

[node name="AnimationTree" type="AnimationTree" parent="." index="2"]
tree_root = SubResource("AnimationNodeStateMachine_ohl2b")
anim_player = NodePath("../AnimationPlayer")
parameters/IWR/blend_position = Vector2(0, 0)

[node name="Physics" type="CollisionShape3D" parent="." index="3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.2, 0)
shape = SubResource("CapsuleShape3D_p56nj")

[node name="Hit_Hurt Boxes" type="Node3D" parent="." index="4"]

[node name="HurtBox" type="Area3D" parent="Hit_Hurt Boxes" index="0"]
script = ExtResource("4_ipphy")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Hit_Hurt Boxes/HurtBox" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.2, 0)
shape = SubResource("CapsuleShape3D_ddw3a")

[node name="Timer" type="Timer" parent="Hit_Hurt Boxes/HurtBox" index="1"]
wait_time = 0.5

[node name="CameraPivot" type="Node3D" parent="." index="5"]
transform = Transform3D(1, 0, 0, 0, 0.939693, -0.34202, 0, 0.34202, 0.939693, 0, 0, 0)

[node name="Camera3D" type="Camera3D" parent="CameraPivot" index="0"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 12.5, 0)

[node name="PlayerUi" parent="." index="6" instance=ExtResource("3_662v4")]

[node name="PortraitCamera" type="Control" parent="PlayerUi" index="1"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="ClippingMask" type="Panel" parent="PlayerUi/PortraitCamera" index="0"]
clip_children = 2
z_index = 2
layout_mode = 0
offset_left = 36.0
offset_top = 34.0
offset_right = 209.0
offset_bottom = 256.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_iogo1")

[node name="SubViewportContainer" type="SubViewportContainer" parent="PlayerUi/PortraitCamera/ClippingMask" index="0"]
layout_mode = 0
offset_left = -36.0
offset_top = -34.0
offset_right = 476.0
offset_bottom = 478.0
scale = Vector2(0.5, 0.5)

[node name="PlayerPortrait" type="SubViewport" parent="PlayerUi/PortraitCamera/ClippingMask/SubViewportContainer" index="0"]
handle_input_locally = false
render_target_update_mode = 4

[node name="SpringArm3D" type="SpringArm3D" parent="PlayerUi/PortraitCamera/ClippingMask/SubViewportContainer/PlayerPortrait" index="0"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 1.80548, 0)
collision_mask = 3
spring_length = 2.5
margin = 0.1

[node name="Camera3D" type="Camera3D" parent="PlayerUi/PortraitCamera/ClippingMask/SubViewportContainer/PlayerPortrait/SpringArm3D" index="0"]

[connection signal="timeout" from="Hit_Hurt Boxes/HurtBox/Timer" to="Hit_Hurt Boxes/HurtBox" method="_on_timer_timeout"]
